# license_tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY_AUDIT.md  pyproject.toml
.jules/: bolt.md
.prd/: 001_seed_idea.md
.specify/memory/: constitution.md
.specify/specs/001-license-tracker/: spec.md  tasks.md
docs/: architecture.rst  cli.rst  conf.py  index.rst  quickstart.rst
docs/api/: cache.rst  index.rst  models.rst  reporters.rst  resolvers.rst  scanners.rst
specs/001-license-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-license-tracker/contracts/: cli-spec.md
src/license_tracker/: __init__.py  cache.py  cli.py  models.py
src/license_tracker/reporters/: __init__.py  base.py  markdown.py
src/license_tracker/resolvers/: __init__.py  base.py  github.py  http.py  pypi.py  spdx.py  waterfall.py
src/license_tracker/scanners/: __init__.py  base.py  pipenv.py  poetry.py  requirements.py
src/license_tracker/templates/: licenses.md.j2
tests/: conftest.py
tests/fixtures/: requirements.txt
tests/integration/: test_cli.py
tests/unit/: test_cache.py  test_cache_batch.py  test_models.py
tests/unit/test_reporters/: test_markdown.py  test_security.py
tests/unit/test_resolvers/: test_github.py  test_pypi.py  test_spdx.py  test_waterfall.py
tests/unit/test_scanners/: test_pipenv.py  test_poetry.py  test_requirements.py
